# CricRepLearn

./: .gitignore  README.md  build_ball_universe.py  config.py  context_aware_dataset.py  create_playerid.py  dataset.py  export_embeddings.py  match_predictor.py  migrate_checkpoint.py  model.py  predict_match.py  prepare_inference_context.py  prepare_trainingdata.py  pyproject.toml  read.py  read_training_csv.py  requirements.txt  train.py
docs/: data-foundation.md  expected-contribution.md  innings-simulation.md  player-centric.md  product-modes.md  project-guide.md  representation-learning.md  statistical-baselines.md  system-overview.md  validation-analysis.md
examples/: ind_vs_eng.json
resources/: player_meta_cricketdata.csv
scripts/: resume_weather_backfill.py
src/cric_rep_learn/: __init__.py
src/cric_rep_learn.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/cric_rep_learn/app/: __init__.py  cli.py  services.py  web.py
src/cric_rep_learn/app/static/: app.js  index.html  styles.css
src/cric_rep_learn/baselines/: __init__.py  evaluate.py  historical.py  metrics.py
src/cric_rep_learn/contribution/: __init__.py  data.py  evaluate.py  model.py  train.py
src/cric_rep_learn/data/: __init__.py  bowling_style.py  build.py  parser.py  player_attributes.py  schema.py  split.py  validate.py
src/cric_rep_learn/fantasy/: __init__.py  baselines.py  calibration.py  cli.py  embeddings_tiebreak.py  holdout_mc.py  leaderboard.py  optimize.py  pool.py  roles.py  scoring.py  venue_tilt.py
src/cric_rep_learn/players/: __init__.py  card.py  forecast_vs_attack.py  partnerships.py  player_effects.py  rank_bowlers_vs_batter.py  rank_vs_bowler.py  venue_similarity.py
src/cric_rep_learn/representations/: __init__.py  baseline_features.py  data.py  evaluate.py  export.py  model.py  train.py
src/cric_rep_learn/simulation/: __init__.py  attack.py  batting_opportunity.py  chase.py  cli.py  innings.py  match.py  match_cli.py  partnership.py  phase.py  phase_score.py  priors.py  run_sampler.py  state.py
src/cric_rep_learn/weather/: __init__.py  build.py
tests/: test_app_modes.py  test_baselines.py  test_contribution.py  test_fantasy.py  test_parser.py  test_player_centric.py  test_player_effects.py  test_representations.py  test_simulation.py  test_split.py  test_weather.py
