[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cric-rep-learn"
version = "0.1.0"
description = "Contextual representation learning for T20 cricket players"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.1",
    "numpy>=1.26",
    "pandas>=2.2",
    "pyarrow>=15",
    "scikit-learn>=1.4",
    "torch>=2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.5",
]

[project.scripts]
cric-build-data = "cric_rep_learn.data.build:main"
cric-split-data = "cric_rep_learn.data.split:main"
cric-validate-data = "cric_rep_learn.data.validate:main"
cric-evaluate-baselines = "cric_rep_learn.baselines.evaluate:main"
cric-build-model-data = "cric_rep_learn.representations.data:main"
cric-train-representations = "cric_rep_learn.representations.train:main"
cric-export-embeddings = "cric_rep_learn.representations.export:main"
cric-evaluate-representations = "cric_rep_learn.representations.evaluate:main"
cric-build-player-attributes = "cric_rep_learn.data.player_attributes:main"
cric-player-card = "cric_rep_learn.players.card:main"
cric-build-contribution-data = "cric_rep_learn.contribution.data:main"
cric-train-contribution = "cric_rep_learn.contribution.train:main"
cric-evaluate-contribution = "cric_rep_learn.contribution.evaluate:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"
